<resources>
    <string name="app_name" translatable="false">ColorSlider</string>
    <string name="color_slider" translatable="false">Color Slider</string>

    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="zero" translatable="false">0</string>
    <string name="thank_you">Thank you</string>
    <string name="colourlovers" translatable="false">www.colourlovers.com</string>
    <string name="random">Random</string>
</resources>
