<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/color_slider"
        android:layout_gravity="center"
        android:paddingTop="8dp"
        android:paddingBottom="4dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp">

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="255"
            android:progress="0"
            android:id="@+id/seekBar_red"
            android:indeterminate="false"/>

        <TextView
            android:id="@+id/red_label"
            android:layout_below="@+id/seekBar_red"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:textSize="18sp"
            android:textColor="#ffff0000"
            android:paddingLeft="100dp"
            android:text="@string/red"
            tools:text="Red"/>

        <TextView
            android:id="@+id/red_value"
            android:layout_below="@+id/seekBar_red"
            android:layout_toRightOf="@+id/red_label"
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:textSize="18sp"
            android:textColor="#ffff0000"
            android:paddingRight="135dp"
            android:gravity="right"
            android:text="@string/zero"
            tools:text="0"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp">

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="255"
            android:progress="0"
            android:id="@+id/seekBar_green"
            android:indeterminate="false"/>

        <TextView
            android:id="@+id/green_label"
            android:layout_below="@+id/seekBar_green"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:textSize="18sp"
            android:textColor="#ff00ff00"
            android:paddingLeft="100dp"
            android:text="@string/green"
            tools:text="Green"/>

        <TextView
            android:id="@+id/green_value"
            android:layout_below="@+id/seekBar_green"
            android:layout_toRightOf="@+id/green_label"
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:textSize="18sp"
            android:textColor="#ff00ff00"
            android:paddingRight="135dp"
            android:gravity="right"
            android:text="@string/zero"
            tools:text="0"/>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp">

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="255"
            android:progress="0"
            android:id="@+id/seekBar_blue"
            android:indeterminate="false"/>

        <TextView
            android:id="@+id/blue_label"
            android:layout_below="@+id/seekBar_blue"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:textSize="18sp"
            android:textColor="#ff0000ff"
            android:paddingLeft="100dp"
            android:text="@string/blue"
            tools:text="Blue"/>

        <TextView
            android:id="@+id/blue_value"
            android:layout_below="@+id/seekBar_blue"
            android:layout_toRightOf="@+id/blue_label"
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:textSize="18sp"
            android:textColor="#ff0000ff"
            android:paddingRight="135dp"
            android:gravity="right"
            android:text="@string/zero"
            tools:text="0"/>

    </RelativeLayout>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

</LinearLayout>
